# lib/api-spec/openapi.yaml
@@ -1727,6 +1727,8 @@ components:
           type: ["string", "null"]
         address:
           type: ["string", "null"]
+        photoUrl:
+          type: ["string", "null"]
         createdAt:
           type: string
           format: date-time
@@ -1765,6 +1767,8 @@ components:
           type: string
         address:
           type: string
+        photoUrl:
+          type: string
       required: [firstName, lastName, gender, admissionDate]
 
     UpdateStudentBody:
@@ -1799,6 +1803,8 @@ components:
         parentRelationship:
           type: string
         address:
+          type: string
+        photoUrl:
           type: string
 
     Teacher:
